--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,9 @@
 ---
 driver:
   name: vagrant
-
+  customize:
+    memory: 3072
+    
 provisioner:
   name: chef_zero
   require_chef_omnibus: 12.19.36
