--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,10 @@
 ---
 driver:
   name: vagrant
-  customize:
-    memory: 4096
-    
+
 provisioner:
   name: chef_zero
-  require_chef_omnibus: 12.19.36
+  require_chef_omnibus: 12.20.3
   # You may wish to disable always updating cookbooks in CI or other testing environments.
   # For example:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
@@ -16,7 +14,7 @@ verifier:
   name: inspec
 
 platforms:
-  - name: opentable/win-2012r2-standard-amd64-nocm 
+  - name: mwrock/Windows2016 
     transport:
       name: winrm
 
