--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,13 +6,17 @@ driver:
 
 provisioner:
   name: chef_zero
+  require_chef_omnibus: 12.19.36
+  # You may wish to disable always updating cookbooks in CI or other testing environments.
+  # For example:
+  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: mwrock/Windows2016 
+  - name: synax/Windows10 
     transport:
       name: winrm
 
