changed to use current branch since 2.1.0 does not exist in stable branch

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,8 +28,8 @@ suites:
       inspec_tests:
         - test/smoke/default
     attributes:
-  # - name: secondary
-  #   verifier:
-  #     inspec_tests:
-  #       - test/smoke/default
-  #   attributes:
+  - name: secondary
+    verifier:
+      inspec_tests:
+        - test/smoke/default
+    attributes:
